test/files/neg/t10680.check
t10680.scala:13: warning: match may not be exhaustive.
It would fail on the following input: (x: MyEnum.Value forSome x not in (e1, e2))
  def fn(e: MyEnum.Value) = e match {
                            ^
t10680.scala:18: warning: match may not be exhaustive.
It would fail on the following inputs: (Value(), _), (_, Value()), (_, _)
  def fn2(e: MyEnum.Value, o: MyOtherEnum.Value) = (e, o) match {
                                                   ^
error: No warnings can be incurred under -Werror.
2 warnings
1 error
